# Wordly

./: README.md  docker-compose.yml
app/: .dockerignore  Cargo.toml  Dockerfile
app/src/: config.rs  data.rs  log.rs  main.rs  routes.rs  templates.rs  websockets.rs
app/static/css/: index.css
app/static/js/: 404.js  index.js
app/templates/: 404.html  base.html  index.html
nginx/: nginx.conf
