[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.7", features = ["ws"] }
axum-client-ip = "0.6.1"
dotenvy = "0.15.7"
envy = "0.4.2"
rand = "0.8.5"
regex = "1.11.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
